<resources>
    <string name="app_name">TrackMe</string>
    <string name="preference_file_key">com.nvkhang96.trackme.PREFERENCE_FILE_KEY</string>
    <string name="history_record_button_description">Record button</string>
    <string name="record_distance_title">Distance</string>
    <string name="record_speed_title">Speed</string>
    <string name="record_pause_button_description">Pause button</string>
    <string name="record_stop_button_description">Stop button</string>
    <string name="record_resume_button_description">Resume button</string>
    <string name="session_distance_title">Distance</string>
    <string name="session_avg_speed_title">Avg. Speed</string>
</resources>