<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.nvkhang96.trackme.viewmodels.RecordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.7"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/distance_title"
            app:layout_constraintEnd_toEndOf="@+id/distance_title"
            app:layout_constraintStart_toStartOf="@+id/distance_title"
            android:text="@{viewModel.distance + ` km`}"
            tools:text="-- km" />

        <TextView
            android:id="@+id/distance_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/record_distance_title"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/pause_session"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/avg_speed_title"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/avg_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/distance"
            app:layout_constraintEnd_toEndOf="@+id/avg_speed_title"
            app:layout_constraintStart_toEndOf="@+id/distance_title"
            android:text="@{viewModel.speed + ` km/h`}"
            tools:text="-- km/h" />

        <TextView
            android:id="@+id/avg_speed_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/record_speed_title"
            app:layout_constraintBaseline_toBaselineOf="@+id/distance_title"
            app:layout_constraintEnd_toStartOf="@+id/duration"
            app:layout_constraintStart_toEndOf="@+id/distance_title" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/distance_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avg_speed_title"
            app:layout_constraintTop_toTopOf="@+id/distance"
            android:text="@{viewModel.duration}"
            tools:text="01:00:00" />

        <ImageView
            android:id="@+id/pause_session"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_pause"
            app:isVisible="@{viewModel.pauseButtonVisible}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/record_pause_button_description" />

        <ImageView
            android:id="@+id/resume_session"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_refresh"
            app:isVisible="@{viewModel.resumeButtonVisible}"
            app:layout_constraintBottom_toBottomOf="@+id/pause_session"
            app:layout_constraintEnd_toStartOf="@+id/pause_session"
            app:layout_constraintTop_toTopOf="@+id/pause_session"
            android:contentDescription="@string/record_resume_button_description" />

        <ImageView
            android:id="@+id/stop_session"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_stop"
            app:isVisible="@{viewModel.stopButtonVisible}"
            app:layout_constraintBottom_toBottomOf="@+id/pause_session"
            app:layout_constraintStart_toEndOf="@+id/pause_session"
            app:layout_constraintTop_toTopOf="@+id/pause_session"
            android:contentDescription="@string/record_stop_button_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>